I think i acc fixed overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,10 +5,11 @@
     font-weight: 100px;
     text-decoration: none;
     color: white;
-    overflow: hidden;
+    =
     scroll-behavior: smooth;
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
+    
 }
 
 .typeform-widget{
@@ -25,6 +26,10 @@
     position: absolute;
     background: #FFF;
     left: 94%;
+}
+.type-container{ 
+    position: relative;
+    width: 100vw;
 }
 
 script{
